Bug 46529 - module-virtual-sink incorrectly assumes float32ne
Summary: module-virtual-sink incorrectly assumes float32ne
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: modules (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords: love
Depends on:
Blocks:
 
Reported: 2012-02-23 10:16 UTC by Tanu Kaskinen
Modified: 2012-12-16 08:48 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Tanu Kaskinen 2012-02-23 10:16:26 UTC
sink_input_pop_cb() in module-virtual-sink copies samples assuming that the format is float32ne, but the user can configure a different format.

To keep things simple, the float32ne assumption is probably a good one, so the solution is then to prevent the user from configuring the sample format.
Comment 1 Ștefan Săftescu 2012-04-05 05:47:38 UTC
I am working on this.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.