virtual-sink: Removed the option to specify sample format.

BugLink: https://bugs.freedesktop.org/show_bug.cgi?id=46529